# my-ffxiv-toolkit

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  Taskfile.yml  compare.py  default.json  main.py  pyproject.toml  rsv.json  rsv.py  scrapper.py
coinach/: Action.all.xlsx  BNpcName.all.xlsx
rsv/: rsv7_1.json  rsv7_2.json  rsv7_2_ko.json  rsv7_4.json
src/bingkit/ffxiv/: __main__.py  _base.py
src/bingkit/ffxiv/coinach/: __init__.py  coinach.py
src/bingkit/ffxiv/raidboss/: __init__.py  raidboss.py
src/bingkit/ffxiv/rsv/: __init__.py  __main__.py  replace.py
src/bingkit/ffxiv/scrap/: __init__.py  __main__.py  default.json  scrapper.py
