[project]
name = "bingkit-ffxiv"
version = "0.4.0"
description = "개인용 FF14 툴킷"
authors = [{ name = "Bingsu", email = "ks2515@naver.com" }]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pandas[excel]",
    "polars[pandas,fsspec,excel]",
    "tqdm",
    "loguru",
    "winloop; platform_system == 'Windows'",
    "taskgroup; python_version < '3.11'",
    "typer",
    "httpx",
]

[dependency-groups]
dev = ["ruff", "pre-commit-uv", "ipykernel"]

[project.scripts]
bingkit-ffxiv = "bingkit.ffxiv.__main__:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.ruff]
select = ["A", "B", "C4", "E", "F", "I001", "N", "PT", "UP", "W"]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]

[tool.ruff.per-file-ignores]
"src/bingkit/ffxiv/__main__.py" = ["FA100", "FA102"]
