[project]
name = "bingkit-ffxiv"
version = "0.6.0"
description = "개인용 FF14 툴킷"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Bingsu", email = "ks2515@naver.com" }]
dependencies = [
  "fsspec[http]",
  "httpr",
  "json-five",
  "loguru",
  "polars[fsspec,excel]",
  "tqdm",
  "typer",
  "universal_pathlib",
  "winloop; platform_system == 'Windows'"
]

[project.scripts]
bingkit-ffxiv = "bingkit.ffxiv.__main__:app"

[dependency-groups]
dev = []

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I001", "N", "PT", "UP", "W"]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"src/bingkit/ffxiv/__main__.py" = ["FA100", "FA102"]

[tool.uv.build-backend]
module-name = "bingkit.ffxiv"
